src/objects/Trigger_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Before Insert</fullName>
                    <default>true</default>
                    <label>Before Insert</label>
                </value>
                <value>
                    <fullName>After Insert</fullName>
                </value>
                <value>
                    <fullName>Before Update</fullName>
                </value>
                <value>
                    <fullName>After Update</fullName>
                </value>
                <value>
                    <fullName>Before Delete</fullName>
                </value>
                <value>
                    <fullName>After Delete</fullName>
                </value>
                <value>
                    <fullName>Before Undelete</fullName>
                </value>
                <value>
                    <fullName>After Undelete</fullName>
                </value>
                <value>
                    <fullName>Before Merge</fullName>
                </value>
                <value>
                    <fullName>After Merge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SObject__c</fullName>
        <label>SObject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_Name__c</fullName>
        <label>Trigger Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isMassive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isMassive</label>
        <type>Checkbox</type>
    </fields>
    <label>Trigger Setting</label>
    <listViews>
        <fullName>All_Settings</fullName>
        <columns>Trigger_Name__c</columns>
        <columns>Event__c</columns>
        <columns>SObject__c</columns>
        <columns>Active__c</columns>
        <columns>isMassive__c</columns>
        <columns>MasterLabel</columns>
        <filterScope>Everything</filterScope>
        <label>All Settings</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Trigger Settings</pluralLabel>
</CustomObject>